--- a/index.html
+++ b/index.html
@@ -210,12 +210,14 @@
             />
             <div class=card>
               <div class="mobile-info">
+               <div style="text-align: center; align-self: center;"> 
                 <span id="head-text">Jessica Vaz</span> <br />
                 <span>
                   <!-- <img class="location-icon" src="location.png" alt="" /> -->
                   <i class="fas fa-map-marker-alt"></i>
                   Bangalore, India</span
                 ><br />
+              </div>
                 <button class="msg-btn">Message</button>
               </div>
             </div>
